objects/ssot__ServiceAppointmentAssignedResource__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualTravelTimeMinutes__c</fullName>
        <label>Actual Travel Time Minutes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelDistanceFrom__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelDistanceTo__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelTimeMinutes__c</fullName>
        <label>Estimated Travel Time Minutes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Service Appointment Assigned Resource Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryResource__c</fullName>
        <label>Is Primary Resource</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequiredResource__c</fullName>
        <label>Is Required Resource</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentId__c</fullName>
        <label>Service Appointment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkResourceId__c</fullName>
        <label>Work Resource</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkResourceRole__c</fullName>
        <label>Work Resource Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061034051_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointmentAssignedResource_W_rel</label>
        <referenceTo>ssot__WorkResource__dlm</referenceTo>
        <relationshipLabel>ServiceAppointmentAssignedResource_W_rel</relationshipLabel>
        <relationshipName>rel_1705061034051_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061034726_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointmentAssignedResource_C_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceAppointmentAssignedResource_C_rel</relationshipLabel>
        <relationshipName>rel_1705061034726_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709303332846_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointmentAssignedResource_S_rel</label>
        <referenceTo>ssot__ServiceAppointment__dlm</referenceTo>
        <relationshipLabel>ServiceAppointmentAssignedResource_S_rel</relationshipLabel>
        <relationshipName>rel_1709303332846_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>